--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Backend server for Don't Die Together",
   "main": "lib/index.js",
   "scripts": {
-    "start": "ts-node index.ts"
+    "dev": "nodemon"
   },
   "author": "",
   "license": "",
@@ -12,6 +12,7 @@
     "@colyseus/loadtest": "^0.13.1",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
+    "nodemon": "^2.0.4",
     "ts-node": "^8.1.0",
     "typescript": "^3.4.5"
   },
