--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "colyseus.js": "^0.13.1",
     "howler": "^2.2.0",
     "kontra": "^6.9.1",
+    "ola": "^1.1.1",
     "three": "^0.117.1"
   },
   "devDependencies": {
