--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -67,6 +67,7 @@
     /* Advanced Options */
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
     "resolveJsonModule": true,
+    "esModuleInterop": true,
     "pretty": true,
     "skipLibCheck": true
   },
