--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@colyseus/monitor": "^0.12.2",
     "@colyseus/social": "^0.10.9",
+    "cannon-es": "^0.15.1",
     "colyseus": "^0.13.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
